--- a/_posts/2025-02-18-nictate.md
+++ b/_posts/2025-02-18-nictate.md
@@ -11,7 +11,7 @@ preview: "The town has certain low-level pleasures, like broad oak trees and pun
 
 I can see almost all of Raleigh from its center. It's built like an old Roman city: a modest grid, bilaterally symmetric, a wide central road starting at the capitol and running until some other neoclassical building. The center for justice is tall and brutal, made of tinted concrete with a huge dulled brass seal above the entrance. In the downtown people wear proper suits and pencil skirts. In the mornings I end up at the same cafe, where the two economic strata of the city mix. Two men discuss something about selling industrial chemicals. Two other men, who I stand behind in line, discover that their youngest children have recently gotten married within a week of each other, then that their oldest children are having their first grandchildren within a few months of each other. They learn that their fathers are 85 and 86, are 'doing okay', though both of them are a little quiet about it, like that it's been hard. The snotty coastal part of me is made to feel better by the middle-American order of their mutual lives---that they both wear checked shirts and nondescript glasses. This feeling is against the recent bad feelings, including the pale loneliness, which of course they've both solved better than I have. They're each stacked almost four generational layers high, which must put them up and above the dark water.
 
-On the plane I watched 'Chungking Express' and then 'I Saw the TV Glow'. CE can feel mean-spirited or unserious if you are not happy before watching it: I guess I have now seen it three times. IStTG, which I had not seen, was written by someone too close in age to me, to involved with early 2000s cliches, and so its motivating fears resonated very simply against my one, and this made me hyperventilate on the plane. I worry, a lot, that if I think too hard about how I have lived the past five or so years, that if I really see how much I have prevented myself, that it will be too awful and I will break apart---but never looking at this is the best way to continue doing this, etc. I also have bad fears that I don't remember things as they were. The movie is about this, in the sense that it is not so good about being about things other than an extended metaphor, and all this is delivered almost entirely with flat affect, and also I was stuck on a plane while watching it. Phoebe Bridgers appears, in-person, in a band in the movie.
+On the plane I watched 'Chungking Express' and then 'I Saw the TV Glow'. CE can feel mean-spirited or unserious if you are not happy before watching it: I guess I have now seen it three times. IStTG, which I had not seen, was written by someone too close in age to me, too involved with early 2000s cliches, and so its motivating fears resonated very simply against my own, and this made me hyperventilate on the plane. I worry, a lot, that if I think too hard about how I have lived the past five or so years, that if I really see how much I have prevented myself, that it will be too awful and I will break apart---but never looking at this is the best way to continue doing this, etc. I also have bad fears that I don't remember things as they were. The movie is pretty much about this, in the sense that it is not so good about being about things other than an extended metaphor, and all this is delivered almost entirely with flat affect, and also I was stuck on a plane while watching it. Phoebe Bridgers appears, in-person, in a band in the movie.
 
 I took the bus downtown this morning rather than an Uber; it cost ten to fifteen times less. Most of the bus passengers knew each other and talked idly for the twenty-five or so minutes it took. Mornings here are almost frosty while the days warm to near 70, which spooks me. I mentioned the downtown is small---over half a million people live here, but mostly out in the suburbs where the roads don't have curbs. Many of the plants are dead now but I can see the spidery remains of vines that blanket and strangle most of the large trees. Some of the skyscrapers at the edge of downtown are abandoned, which I have not seen before.
 
