--- a/_drafts/2025-04-13-cissoid.md
+++ b/_drafts/2025-04-13-cissoid.md
@@ -19,4 +19,52 @@ I have wondered recently if there is anything I can do to feel more energetic du
 
 What is worse is that there are flashes of this kind of level focus------two nights ago I spent time reading about the details of computing general-relativistic corrections to the precession of the perihelion of Mercury, which when quoted is uniformly given such shallow treatment that one is made to wonder if *anyone* has actually computed it. I found some treatment by some fastidious graduate student over ten years ago; GR is the perfect substrate for humilty. Approximation after approximation is applied until all that remains is to laboriously compute sixteen Christoffel symbols, and then shunt these into tensor after tensor, and then derive some unwieldy equation of motion, the relevant quantity of which relates to some pair of evil elliptic integrals. Quoted also always is that this is only the *correction* to the observed precession, which is dominated (by nearly ten-to-one) by 'contributions from other planets', a derivation of which I've still not found. It is this sort of work which feels sort of incorporatable into the messy bliss of human relationships-------it is much easier to imagine a composite life where one's day is spent compiling tables of integrals, and one's night is spent paying a few bils, cooking something basic and filling, and trying to plan with a spouse some small trip a few months hence to a warmer nearby coastal town. I have heard some legend that much of Mathematica's internal library for solving integrals is drawn from compendiums honed in the Soviet Bloc in the later part of the last century; what a disgrace that my small aluminum Mac Mini spits these out soundlessly at my request.
 
-*Some further comments about math and reading. Maybe about recent Kawakami Mieoko, or Keene translations, or total lack of the sort of lay-educated substrate of Cambridge, which despite its self-importance does just give a lot of easy real-estate to be sober and engaged. The abundance of money in all adjacencies.*
+### before sleep
+
+It's the following night; I plan to listen to a friend's thesis defense early into the morning local time, so I've holed up at my sitting desk with some mindless content on in the background. I've made tea with my Hario 急須: some mild herbal blend. I've placed a small mandarin by the Mac Mini for later snacking. A small CRT television I ordered a few days ago arrived, set on my doorstep; I tuck it next to my low MUJI shelves, on the opposite side from the small chest of drawers. The built-in VHS-player works------after getting home I watch a few minutes of Nausicaä, and then a few minutes of Serial Experiments Lain. The device eats and spits out the tapes noisily, spinning them up and down. By no real effort the number of screens I own has increased dramatically: my work laptop, my phone, my old laptop, an iPad, a Studio Display, and now a Sharp-brand CRT (2000年製). On the phone I told my sister once that my nights end by moving from smaller to smaller screens.
+
+Last night instead of flipping aimlessly through shorter form video content I watched 'After Life' (1998), which in the original is called ワンダフルライフ (Wonderful Life). I liked it a lot------I feel averse to describing why, mainly because I find most instances of movie criticism (see above) annoying or reductive, but it feels like there is not much to do besides talk some about it. I think if death's form could be chosen I would like it to be as it was in 'After Life'. The setting felt like the campus I work at------or at least the old Yasuda-gothic buildings of the orignal, core campus, all done in thin brick and weather-ravaged porous stone. Old curled trees and fallen leaves. I am partial to the idea of death as a small and mild beauracracy. How it might be run like a small town's city hall, criss-crossed with basic rules toward collation and order, but not overrun by apathy, nor exhausted by throughput. I cried at the end, very simply. This started with しおり in the snow. I felt her her fear, how she was overwhelmed. In brief moments throughout I felt the enormity of the adjacency of death, smoothed over by the solace offered by the movie's idea that we might all be allowed however much time we want, at the end, to collect ourselves. In the film しおり goes out and takes photos in the world when she is supposed to be capturing reference for the small films made by the facility's workers------there is no harsh barrier between the world of the living and that of the processing center, and no one tries to run, or call to someone who can't hear them------her room's walls are covered in prints from past outings. I think this is my impulse, too: to collect and appreciate. I find small pleasures in observation quite easily, I think, and subsist on accrued data (and its signs, in objects and records). 
+
+I have gathered more movies to eventually watch, and saved a few of them on the Internet Archive, though for now will keep the pace slow. On the train I read ヘヴン slowly, as usual, and at work I edit drafts, review papers, and try to scrape out ideas for the next few months and years. There is a 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
