--- a/_posts/2025-04-13-cissoid.md
+++ b/_posts/2025-04-13-cissoid.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: ""
-sub-title: "."
+title: "On computing the areas of certain geometrical figures"
+sub-title: "Basically known techniques like prosthaphaeresis and rabdology."
 date: 2025-04-13 10:10:00 +09
 permalink: "/cissoid/"
 location: "東京都世田谷区北沢"
 ordinal: 43
-preview: "."
+preview: "I covet, sometimes, a modest office whose solid wooden desk stores papers whose fibers, like those of the desk, swell and contract with the seasons, imparting a soft sweet resinous smell."
 ---
 
-It's raining outside the café. The large wooden table on the patio is only half under the awning, and its far edge is dark and glossy. On the dry side two men sit with laptops open discussing business. One of the laptops sits on a stand, elevated, which I interpret as a power move. One has a mug and the other a cappucino cup; both are white. The mug flares at the top and bottom, which is a shape I've only ever been able to associate with the cooling towers of nuclear power plants. The back door of the café, mainly glass, opens up on an overgrown lawn------the rain and warmth have caused the green to explode. I have noticed, on my walks around 三四郎池, that the tree trunks are now coated in moss and lichens when they were not just a few weeks ago. Near my house there is an old house newly florid with ivy. I make a note to air out my apartment more frequently, to clean out the trap in my sink, to hang my towels in the sun when I can------anything to discourage mold. Yesterday I washed and dried a few glass jars that had been crowding my fridge, leaving them to dry in a line on the window-sill above my sink. The window faces almost due East, so they glow in the mornings.
+It's raining outside the café. The large wooden table on the patio is only half under the awning, and its far edge is dark and glossy. On the dry side two men sit with laptops open discussing business. One of the laptops sits on a stand, elevated, which I interpret as a power move. One has a mug and the other a cappuccino cup; both are white. The mug flares at the top and bottom, which is a shape I've only ever been able to associate with the cooling towers of nuclear power plants. The back door of the café, mainly glass, opens up on an overgrown lawn------the rain and warmth have caused the green to explode. I have noticed, on my walks around 三四郎池, that the tree trunks are now coated in moss and lichens when they were not just a few weeks ago. Near my house there is an old house newly florid with ivy. I make a note to air out my apartment more frequently, to clean out the trap in my sink, to hang my towels in the sun when I can------anything to discourage mold. Yesterday I washed and dried a few glass jars that had been crowding my fridge, leaving them to dry in a line on the window-sill above my sink. The window faces almost due East, so they glow in the mornings.
 
 Last night I watched 'Kids' (1995) on the Internet Archive, which I liked a whole lot less than 'Gummo' (1997). I got no sense in this one of what Korine thought was important------what would make him cry. The movie is scattered with moments of grace: the kids at times give money to the homeless, are entranced by a subway busker, pass fruit to a small child, cradle one-another, but these are so unattended that they feel like 'bits.' I can understand that the movie's mundane violence is supposed to intend that many horrible things don't couple to any real interpretable narrative, but this seems against basic human impulse to nevertheless think of one's own life in narrative terms, and to feel immense discomfort when this is challenged. Any child is deep into an understanding of their own lives dominated by a paucity of input; any book or movie a child ingests is engrossing and about them. The children watch a tiny CRT with skateboard tricks in the movie while doing whippets but this leads nowhere. They beat a boy nearly to death with a skateboard later. I read somewhere that Korine found the male lead on the street while he was doing skateboarding tricks and cursing------what a disservice, then, to play him as someone who cares about nothing.
 
@@ -17,13 +17,13 @@ I don't know, though. I can't imagine being a child in The City in the 1990s. It
 
 I have wondered recently if there is anything I can do to feel more energetic during the afternoon and evenings that doesn't reduce to substance abuse (primarily caffeine). I can sense, as though I were charting astronomical transits or occlusions, that there is *some* combination of food, sleep, media consumption, and socialization that seems to prime me to work fluidly, to feel hale, but all the epicycles have made progress slow. I must be Tycho Brahe. I must tweak the armillary sphere.
 
-What is worse is that there are flashes of this kind of level focus------two nights ago I spent time reading about the details of computing general-relativistic corrections to the precession of the perihelion of Mercury, which whenever quoted is uniformly given such shallow treatment that one is made to wonder if *anyone* has actually computed it. I found some treatment by some fastidious graduate student over ten years ago, which appears to have been made against this frustration. GR is a perfect substrate for humilty. Approximation after approximation is applied until all that remains is to laboriously compute sixteen non-trivial Christoffel symbols, then shunt these into tensor after tensor, then derive some unwieldy equation of motion, the relevant quantity of which relates to some pair of evil elliptic integrals. It's all very unsettling. Quoted also always is that this is only the *correction* to the observed apsidal precession, which is dominated (nearly ten-to-one) by 'contributions from other planets', a derivation of which I've still not found. It is this sort of work which feels incorporatable into the silty bliss of human relationships-------it is much easier to imagine a composite life where one's day is spent compiling tables of integrals and one's night is spent paying a few bils, cooking something basic and filling, and trying to plan with a spouse some small trip a few months hence to a warmer nearby coastal town. I have heard some legend that much of Mathematica's internal library for solving integrals is drawn from compendiums (or better termed *ephemerides*) honed in the Soviet Bloc in the later part of the last century; what a disgrace that my squat aluminum Mac Mini spits them out soundlessly at my beck.
+What is worse is that there are flashes of this kind of level focus------two nights ago I spent time reading about the details of computing general-relativistic corrections to the precession of the perihelion of Mercury, which whenever quoted is uniformly given such shallow treatment that one is made to wonder if *anyone* has actually computed it. I found some treatment by some fastidious graduate student over ten years ago, which appears to have been made against this frustration. GR is a perfect substrate for humility. Approximation after approximation is applied until all that remains is to laboriously compute sixteen non-trivial Christoffel symbols, then shunt these into tensor after tensor, then derive some unwieldy equation of motion, the relevant quantity of which relates to some pair of evil elliptic integrals. It's all very unsettling. Quoted also always is that this is only the *correction* to the observed apsidal precession, which is dominated (nearly ten-to-one) by 'contributions from other planets', a derivation of which I've still not found. It is this sort of work which feels incorporatable into the silty bliss of human relationships-------it is much easier to imagine a composite life where one's day is spent compiling tables of integrals and one's night is spent paying a few bils, cooking something basic and filling, and trying to plan with a spouse some small trip a few months hence to a warmer nearby coastal town. I have heard some legend that much of Mathematica's internal library for solving integrals is drawn from compendiums (or better termed *ephemerides*) honed in the Soviet Bloc in the later part of the last century; what a disgrace that my squat aluminum Mac Mini spits them out soundlessly at my beck.
 
 ### before sleep
 
 It's the following night; I plan to listen to a friend's thesis defense early into the morning local time, so I've holed up at my sitting desk with some mindless content on in the background. I've made tea with my Hario 急須: a mild herbal blend. I've placed a small mandarin by the Mac Mini for later snacking. A small CRT television I ordered a few days ago arrived, set on my doorstep; I tuck it next to my secondhand low MUJI shelves, on the opposite side from the small chest of drawers. The built-in VHS-player works------after getting home I watch a few minutes of Nausicaä, and then a few minutes of Serial Experiments Lain. The next night (this sentence is a later inserted edit), I watch part of 'Eraserhead,' and 'Asparagus' (by Suzan Pitt), which was often shown with it as a double feature. The device eats and spits out the tapes greedily, spinning them up and down. By no real effort the number of screens I own has increased dramatically: my work laptop, my phone, my old laptop, an iPad Air, an Apple Studio Display, and now a Sharp-brand CRT (2000年製). On the phone I told my sister once that my nights end by moving from smaller to smaller screens, until oblivion.
 
-Last night instead of flipping aimlessly through shorter form video content I watched 'After Life' (1998), which in the original is called ワンダフルライフ (Wonderful Life). I liked it a lot------I feel averse to describing why, mainly because I find most instances of movie criticism (see above) annoying to read, but it feels like there is not much to do besides talk some about it. I think if death's form could be chosen I would like it to be as it was in 'After Life'. The setting felt like the campus I work at------or at least the old Uchida-gothic buildings of the orignal, core campus, all done in thin brick and weather-ravaged porous stone; in the fall the leaves fall incessantly, and are swept away by armies of old men in cornflower blue all-in-ones. I am partial to the idea of death as a small and mild beauracracy. How it might be run like a small town's city hall, criss-crossed with basic rules toward collation and order, but not overrun by apathy, nor exhausted by throughput. I cried at the end, very simply. It would be dumb to film how this happened but it did: when they cut to しおり behind the camera a single tear literally rolled down my cheek. But the whole emotion of it mainly started with しおり in the snow. I felt her panic and fear, how she was overwhelmed. In brief moments throughout the movie I felt the enormity of the adjacency of death, smoothed over by the solace offered by the movie's idea that we might all be allowed however much time we want, at the end, to collect ourselves. I think that is a fear of mine------that somehow being rushed will be part of it. In the film しおり goes out and takes photos in the world when she is supposed to be capturing reference for the small films made by the facility's workers------there is no harsh barrier between the world of the living and that of the processing center, and no one tries to run, or call to someone who can't hear them------her room's walls are covered in prints from past outings, blurry selfies, underexposed bland cityscapes. I think this is my impulse, too: to collect and appreciate. It helps me feel that whatever I am doing is 'happening.' I find small pleasures in observation easily, I think, and subsist on accrued data (and in their signs, in their objects and records).
+Last night instead of flipping aimlessly through shorter form video content I watched 'After Life' (1998), which in the original is called ワンダフルライフ (Wonderful Life). I liked it a lot------I feel averse to describing why, mainly because I find most instances of movie criticism (see above) annoying to read, but it feels like there is not much to do besides talk some about it. I think if death's form could be chosen I would like it to be as it was in 'After Life'. The setting felt like the campus I work at------or at least the old Uchida-gothic buildings of the original, core campus, all done in thin brick and weather-ravaged porous stone; in the fall the leaves fall incessantly, and are swept away by armies of old men in cornflower blue all-in-ones. I am partial to the idea of death as a small and mild bureaucracy. How it might be run like a small town's city hall, crisscrossed with basic rules toward collation and order, but not overrun by apathy, nor exhausted by throughput. I cried at the end, very simply. It would be dumb to film how this happened but it did: when they cut to しおり behind the camera a single tear literally rolled down my cheek. But the whole emotion of it mainly started with しおり in the snow. I felt her panic and fear, how she was overwhelmed. In brief moments throughout the movie I felt the enormity of the adjacency of death, smoothed over by the solace offered by the movie's idea that we might all be allowed however much time we want, at the end, to collect ourselves. I think that is a fear of mine------that somehow being rushed will be part of it. In the film しおり goes out and takes photos in the world when she is supposed to be capturing reference for the small films made by the facility's workers------there is no harsh barrier between the world of the living and that of the processing center, and no one tries to run, or call to someone who can't hear them------her room's walls are covered in prints from past outings, blurry selfies, underexposed bland city-scapes. I think this is my impulse, too: to collect and appreciate. It helps me feel that whatever I am doing is 'happening.' I find small pleasures in observation easily, I think, and subsist on accrued data (and in their signs, in their objects and records).
 
 I have gathered more movies to eventually watch, and saved a few of them on the Internet Archive, though for now will keep the pace slow. In a local store I see a DVD for 'Distance' for ￥200, but decide not to pick it up for now. On the train I read ヘヴン slowly, as usual, and at work I edit drafts, review others' papers, and try to scrape out ideas for the next few months and years. I see online that 川上未映子 has released a new book of short stories, which I should go out and buy, for when ヘヴン is over.
 
