--- a/_posts/2025-04-27-pyrexia.md
+++ b/_posts/2025-04-27-pyrexia.md
@@ -43,7 +43,7 @@ I was awakened by the sound of the front door being flung open, but I did not ge
 
 He switched on the light in the next room and, breathing heavily, managed to rummage through the drawers of the table and the bookcase, searching for something. After a few minutes there was a noise that sounded as if he had flopped down on the floor. Then I could hear only his panting. Wondering what he might be up to I called to him from where I lay. "Have you had supper yet? There's some cold rice in the cupboard."
 
-"Thank you," he answered in an unowontedly gently tone. "How is the boy? Does he still have a fever?"
+"Thank you," he answered in an unowontedly gentle tone. "How is the boy? Does he still have a fever?"
 
 This was also unusual. The boy is four this year, but whether because of malnutrition, or his father's alcoholism, or sickness, he is actually smaller than most two-year-olds. He is not even sure on his feet, and as for talking, it's all he can do to say 'yum-yum' or 'ugh.' Sometimes I wonder if he is not feeble-minded. Once, when I took him to the public bath and held him in my arms after undressing him, he looked so small and pitifully scrawny that my heart sank, and I burst into tears in front of everybody. The boy is always having upset stomachs or fevers, but my husband also never spends any time at home, and I wonder what if anything he thinks about the child. If I mention to him that the boy has a fever, he says, "You ought to take him to a doctor," Then he throws on his coat and goes off somewhere. I would like to take the boy to the doctor, but I haven't the money. There is nothing I can do but lie beside him and stroke his head.
 
