--- a/_posts/2025-06-05-aporia.md
+++ b/_posts/2025-06-05-aporia.md
@@ -19,8 +19,8 @@ Other serious writing I go through includes online entries in the Stanford Encyc
 
 In a cafe and then a university library I read from a collected book of essays and [lectures](https://www.goodreads.com/book/show/1436473.The_Spirit_in_Man_Art_and_Literature) by Jung I found for ￥300 at my local academic bookstore. The first are a pair of talks on the physician Paracelsus. The second pair are lectures on Freud, the second of these just after his death, where Jung compares his once-mentor's apparently parthenogenic cosmology to negative definitions against the ails of the Victorian era, etc. I know their relationship was a long and complicated one, that Jung eventually thumbed-the-nose while and after war convulsed Europe; i.e., I am aware that I am missing so much. The essays on Paracelsus are more pleasant and immediate, though his respect for psychoanalysis is anyway evident in the others------I am reminded how easy alchemical modes slip back into our thoughts, the multitude of ways in which 'pagan' patterns reassert themselves once one becomes sufficiently skeptical. I try to imagine the early 16th century. I read more about the phlogiston theory.
 
-I read a string of Tweets from some anonymous user I used to follow on my second alt account (basically inactive), who chews out other users in frankly needlessly ornate language that nevertheless also pleases me. They say desultory and scurrilous and exegete---they call something 'atrociously puerile', say something 'apes the language of digital shortform mourning', and distinguish between their 'affective' and 'functional' seriousness, before bemoaning that they cannot go to their local university library to study because of its competitive atmosphere and repletion of 'pretty girls.' I consider if I would prefer to write this way; part of me is ashamed that I have to work so hard to even approach this sort of register, and usually ever only (falsely) imply that I *could do it if I wanted* by mocking the sort of high-low 'bit' common to the DeLillo and Wallace pretenders of the world. What stops me from completely despairing is an inference that this Poster is quite gloomy, quite twilit, as though this means that the price of easy, lambent language were one's hikikomorification.
+I read a string of Tweets from some anonymous user I used to follow on my second alt account (basically inactive), who chews out other users in frankly needlessly ornate language that nevertheless also pleases me. They say desultory and scurrilous and exegete------they call something 'atrociously puerile', say something 'apes the language of digital shortform mourning', and distinguish between their 'affective' and 'functional' seriousness, before bemoaning that they cannot go to their local university library to study because of its competitive atmosphere and repletion of 'pretty girls.' I consider if I would prefer to write this way; part of me is ashamed that I have to work so hard to even approach this sort of register, and usually ever only (falsely) imply that I *could do it if I wanted* by mocking the sort of high-low 'bit' common to the DeLillo and Wallace pretenders of the world. What stops me from completely despairing is an inference that this Poster is quite gloomy, quite twilit, as though this means that the price of easy, lambent language were one's hikikomorification.
 
 The needless expenditure of this sort of independent, online, serious writing is immense------this is another explanation of why it is appealing. Like inspecting mature knots of strangling fig vines. The oncogencic aspect is part of what tenders a kernel of respect------is why I was not totally put out by a subset of my former MIT-frat roommates between 2021 and 2024. They really seemed to be spending a hell of a lot of time and inducing a lot of suffering (internal and adjacent) to try and figure out what was Wrong with them. They explicitly cited these sites, these communities, the sulking communes of SF and the massive online treatises on meditation prefaced (necessarily, for what Rational reader would imbibe them otherwise?) by lengthy meta-warnings on the dangers of meditation. There is a grossness and fear that the density and opacity is a necessary part of it, an admixture only to allow one to consume the stuff without gagging, but this seems like an unsolvable problem to pin down, and I also have to take pleasure in the utility of us all miskeying what we think and what we do. As in, I think people are like pre-stressed, post-tensioned concrete------the injuries we inflict selfward may make sense only under extreme, anomalous, possibly hypothetical loads.
 
-I keep myself low I try to remember tableaux on my commutes. In 下北沢駅 in the morning I see a young man 'crashing out', squatting on the floor with his eyes covered, comforted by a companion woman. I see a young boy run across the street without warning, narrowly missed by a mother on a large electric bicycle who is not looking. I inspect firm buds and place my camera up close to them, snapping a photo almost instantaneously optimized and adjusted by what Apple knows makes botanical snapshots look 'excellent.' I have learned the order of smells on the green-way by my commute home (prefaced by some flowers' mild perfume released only at sundown, and ended by a bakery's burnt sugar). If I make it near the station before 8am I see a calisthenic copse of older men and woman bending their knees and swinging their arms. Men in bright synthetics jog in puffy sneakers. I try to identify the fabric of formal suits. I look at the variations in school uniforms, and see from afar the bright orange and yellow sunhats of elementary school children being herded across intersections by women with low ponytails. I see whether the oncoming train has a pantograph or a linear-induction drive (there are almost no third rails in Tokyo; only the 銀座線 and the 丸ノ内線). For trains, I note if a station is preceded by a gentle 'S' curve, prized by enthusiasts as they allow photographs to capture both the face and gently bending flank of the oncoming train. They look like great steel caterpillars, and move so quietly. Noticing is very cheap and pleasurable: its produce can be stored durably for rehydration in times of fallow.
+To keep myself low I try to remember tableaux from my commutes. In 下北沢駅 in the morning I see a young man 'crashing out', squatting on the floor with his eyes covered, comforted by a companion woman. I see a young boy run across the street without warning, narrowly missed by a mother on a large electric bicycle who is not looking. I inspect firm buds and place my camera up close to them, snapping a photo almost instantaneously optimized and adjusted by what Apple knows makes botanical snapshots look 'excellent.' I have learned the order of smells on the green-way by my commute home (prefaced by some flowers' mild perfume released only at sundown, and ended by a bakery's burnt sugar). If I make it near the station before 8am I see a calisthenic copse of older men and woman bending their knees and swinging their arms. Men in bright synthetics jog in puffy sneakers. I try to identify the fabric of formal suits. I look at the variations in school uniforms, and see from afar the bright orange and yellow sunhats of elementary school children being herded across intersections by women with low ponytails. I see whether the oncoming train has a pantograph or a linear-induction drive (there are almost no third rails in Tokyo; only the 銀座線 and the 丸ノ内線). For trains, I note if a station is preceded by a gentle 'S' curve, prized by enthusiasts as they allow photographs to capture both the face and gently bending flank of the oncoming train. They look like great steel caterpillars, and move so quietly. Noticing is very cheap and pleasurable: its produce can be stored durably for rehydration in times of fallow.
